# SimpleBVHPlayer

./: .gitignore  CMakeLists.txt  build.sh
core/: BVH.cpp  BVH.h  Basics.cpp  Basics.h  CMakeLists.txt  Joint.cpp  Joint.h  Pose.cpp  Pose.h  Skeleton.cpp  Skeleton.h
render/: BVHWindow.cpp  BVHWindow.h  CMakeLists.txt  Camera.cpp  GLWindow.cpp  GLWindow.h  main.cpp
